--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="个人blog 博客 个人resume 简历开发 面试简历 内推简历 以梦为马,不负韵华">
+    <meta name="keywords" content="个人blog 博客 简历开发 面试简历 内推简历 以梦为马,不负韵华 徐承彪的resume 徐承彪的博客">
     <meta name="description" content="以梦为马，不负韵华" />
     <meta name="author" content="" />
     <link rel="shortcut icon" href="./icon/favicon.ico" />
