--- a/connect.html
+++ b/connect.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="以梦为马，不浮韵华" />
     <meta name="author" content="" />
+    <meta name="keywords" content="徐承彪的项目地址 resume的项目" >
     <link rel="shortcut icon" href="./icon/favicon.ico" />
     <link rel="bookmark"href="./icon/favicon.ico" />
 
