--- a/connect.html
+++ b/connect.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Font-End小栈</a>
+          <a class="navbar-brand" href="/">Front-End小栈</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
