--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="./css/github.css" rel="stylesheet" />
     <link href="./css/column.css" rel="stylesheet" />
+
   </head>
 
   <body id="home">
@@ -177,6 +178,19 @@
                 </a>
               </li>
               <br><br><br>
+              <li>
+                <!-- <audio autoplay controls loop>
+                  
+                <source src="music/挪威的森林.mp3" type='audio/ogg'>
+                <source src="music/缘分一道桥.mp3" type='audio/mpeg'>  -->
+                 <audio controls="controls" autoplay="autoplay" controls="controls" hidden="hidden"
+                 loop 
+                 
+                 >      
+                  <source src="music/挪威的森林.mp3" type="audio/mp3">           
+                     </audio>
+
+              </li>
               <li>
                 <a
                   href="https://www.aliyun.com/"
