--- a/connect.html
+++ b/connect.html
@@ -93,7 +93,7 @@
         <div class="single-member">
             <div class="member-info">
           <h3>Form表单</h3>
-                <h5>2018.1</h5>
+                <h5>2016.12</h5>
             </div>
             <div class="member-image">
                 <img src="icon/form.png" alt="">
@@ -108,7 +108,7 @@
         <div class="single-member">
             <div class="member-info">
                 <h3>TodoList</h3>
-                <h5>2019.3</h5>
+                <h5>2018.3</h5>
             </div>
             <div class="member-image">
                 <img src="icon/todu.png" alt="">
@@ -126,13 +126,13 @@
         <div class="single-member">
             <div class="member-info">
                 <h3>全栈开发</h3>
-                <h5>2017.1</h5>
+                <h5>2019.3</h5>
             </div>
             <div class="member-image">
                 <img src="icon/quanzhan.png" alt="">
             </div>
             <div class="more-info">
-                <p><a href="bt-item/quanzhan.html">运用PhotoShop将PSD图还原成相应的静态页面，并运用Javascript实现轮播效果。</a></p>
+                <p><a href="bt-item/c-example.html">运用PhotoShop将PSD图还原成相应的静态页面，并运用Javascript实现轮播效果,用js插件封装播放器选项，实现css3轮转和点击切换</a></p>
             </div>
         </div>
         <!-- 
