--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="个人blog 博客 简历开发 面试简历 内推简历 以梦为马,不负韵华 徐承彪的resume 徐承彪的博客">
     <meta name="description" content="以梦为马，不负韵华" />
     <meta name="author" content="" />
+    <meta name="360-site-verification" content="ee48a62ad1bd7e8871b872484d5f8a99" />
     <link rel="shortcut icon" href="./icon/favicon.ico" />
     <link rel="bookmark"href="./icon/favicon.ico" />
 
