--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               徐承彪，黑大电子工程系物联网工程专业。致力前端、数据可视化、Node等领域
             </p>
             <h4>Coding language：</h4>
-            <p>JAVA | JSP | C/C++ | THML | CSS | JS | NODE |</p>
+            <p>JAVA | JSP | C/C++ | THML | CSS | JS | NODE | Python |</p>
           </div>
 
           <div class="sidebar-module">
