--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     <meta name="keywords" content="徐承彪 个人blog 博客 web简历 徐承彪的resume 徐承彪的博客">
     <meta name="description" content="以梦为马，不负韵华" />
     <meta name="author" content="" />
-    <meta name="360-site-verification" content="ee48a62ad1bd7e8871b872484d5f8a99" />
+    <meta name="360-site-verification" content="87f1e042940db4c0a0f1c15c32c2a4e7" />
     <link rel="shortcut icon" href="./icon/favicon.ico" />
     <link rel="bookmark"href="./icon/favicon.ico" />
 
