--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="以梦为马，不负韵华" />
     <meta name="author" content="" />
     <meta name="360-site-verification" content="87f1e042940db4c0a0f1c15c32c2a4e7" />
+    <meta name="sogou_site_verification" content="DmW76IAttE"/>
     <link rel="shortcut icon" href="./icon/favicon.ico" />
     <link rel="bookmark"href="./icon/favicon.ico" />
 
