--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		  max-width: none;
 			}
 </style>
-<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
-
+<
+<script src="https://api.map.baidu.com/api?v=2.0&ak=qWmCfqDAdPBzy3YoHxGnimKT&s=1"></script>
   </head>
 
   <body id="home">
